--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 *{
     margin: 0;
-    padding: 50px;
+    padding: 0;
 
 }
 body{ 
@@ -13,10 +13,11 @@ body{
 #cajero{
     width: 430px;
     height: 430px;
-    background-color: rgb(100, 100, 100);
-    border: rgb(145, 145, 145) 3px inset;
-    margin:  5px auto;
-    border-radius: 20px;
+    background-color: rgb(102, 102, 102);
+    border: rgb(117, 117, 117) 3px inset;
+    
+    margin: 100px auto;
+    border-radius: 30px;
     padding: 5px;
 }
 #header{
@@ -25,45 +26,57 @@ body{
     margin: 1px ;
     padding: 1px;
     border-radius: 15px;
+    display: flex;
     
 
 }
 #aside1{
-     width: 10px;
-     height: 70px;
-     background-color: rgb(255, 255, 255);
+     width: 50px;
+     height: 200px;
      border-radius: 15px;
      margin: 1px;
+     margin-top: 30px;
      padding-left: 1px;
-     float: left;
-     margin-top: 10px;
-     padding-top: 90px;
+     display: flex;
+     justify-content: end;
+     align-items: center;   
+}
+.triangulo{
+    width: 0;
+    height: 0;
+    border-right: 20px solid white;
+    margin: 4px;
+    border-top: 8px solid transparent;
+    border-bottom: 7px solid transparent;
+}
+.triangulo1{
+    width: 0;
+    height: 0;
+    border-left: 20px solid white;
+    margin-left: 7px;
+    border-top: 8px solid transparent;
+    border-bottom: 7px solid transparent;
 }
 #centro{
-    width: 231px;
-    height: 70px;
+    width: 310px;
+    height: 200px;
     background-color: rgb(231, 229, 99);
-    border: rgb(100, 100, 100) 7px inset;
-    margin: 1px ;
-    padding-right: 1px;
-    float: left;
-    margin-top: 5px;
-    border-radius: 15px;
-    padding-top: 100px;
-    justify-content: center;
+    border: rgb(85, 85, 85) 9px inset;
     
+    margin-top: 5px;
+    border-radius: 15px;   
 
 }
 #aside2{
-    width: 10px;
-    height: 70px;
-    background-color: rgb(255, 255, 255);
+    width: 50px;
+    height: 200px;
     border-radius: 15px;
     margin: 1px ;
-    margin-top: 10px;
+    margin-top: 30px;
     padding-right: 1px;
-    float: left;
-    padding-top: 90px;
+    display: flex;
+     justify-content: start;
+     align-items: center;
     
 }
 #main{
@@ -71,50 +84,39 @@ body{
     margin: 1px ;
     padding: 1px;
     border-radius: 15px;
+    display:flex;
     
 
     
 }
 .tecladus {
-    width: 55px;
-    height: 80px;
-    
-    float: left;
+    width: 150px;
+    height: 180px;
     border-radius: 15px;
     margin: 1px;
+    
     display: flex;
     justify-content: center;
+    align-items: center;
+    
     
 
     
 }
 #opera{
-    width: 10px;
-    height: 80px;
-    
-    float: left;
+    width: 81px;
+    height: 180px;
     border-radius: 15px;
-    margin: 1px ;
-    align-items: center;
-    display: flex; 
-    justify-content: center;
-    
-    
-    
-    
-     
+    margin-left: 10px ;
+    margin-right: 10px;
+    padding-top: 2px;    
 }
 #exter{
-    width: 56px ;
-    height: 80px;
-    background-color: rgb(255,255,255);
-    float: left;
+    width: 170px;
+    height: 180px;
+    
     border-radius: 15px;
-    margin: 1px auto;
-    display: flex;
-    
-    
-      
+    margin: 1px ;
 }
 
 
@@ -123,62 +125,138 @@ body{
 
 .tecladus button{
 
-    width: 35px;
-    width: 33px;
-    padding: 6px;
-    margin: 1px;
-    margin-left: 13px;
-    margin-right: 10px;
+    width: 37px;
+    height: 32px;
+    margin: 5px;
     margin-bottom: 8px;
     border-radius: 7px;
     font-size: 20px;
-    border: rgb(1,1,1) 1px inset;
-    transition: all 0.10s;
+    border: rgb(68, 68, 68) 3px inset;
+    transition: all 0.25s;
+    cursor: pointer;
   
 }
 .numero{
+    width: 150px;
+    height: 180px;
     flex-direction: column;
-    display: flex;
-    align-items: center;
-    justify-content: center;
- 
+    display: flex; 
+    align-items: center; 
 }
-.numero div{
-    
-    display: flex;
-    padding: 0px;
-    
-    text-align: center; 
-    justify-content: center; 
-}
+
 .numero button:hover{
     box-shadow: 0px 0px 12px gold;
 }
-
-
-
 .op button{
-    height: 45px;
-    width: 85px;
+    height: 37px;
+    width: 87px;
     padding: 6px;
-    margin: 1px;
-    border-radius: 7px;
-
-
+    margin-top: 2px;
+    margin-bottom: 4px;
+    border-radius: 7px;  
+    cursor: pointer;
 }
-.op{
-    flex-direction: column;
-    align-items: center;
-   
-    justify-content: center;
-    
+.op button:hover{
+    box-shadow: 0px 0px 12px rgb(54, 54, 54);
 }
+
 .op div{
+    
     text-align: center;
-    padding: 3px;
+    margin-bottom: 2px;
     display: flex;
     justify-content: center;
 }
+.arriba{
+    width: 65px;
+    height: 5px;
+    background-color: black;
+    border: rgba(104, 103, 103, 0.712) 8px inset;
+    border-radius: 6px;
+}
+.mo1{
+    width: 80px;
+    height:40px;
+    margin-left: 2px;
+}
+.moneda{
+    padding-top: 10px;
+    width: 170px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+}
+
+.abajo{
+    width: 150px;
+    height: 5px;
+    background-color: black;
+    border: rgba(95, 95, 95, 0.712) 10px inset;
+    border-radius: 6px;
+    
+}
+.billete{
+    width: 170px;
+    height: 105px; 
+    padding-top: 20px;
+     
+}
+.b1{
+    width: 165px;
+    height: 40px;
+    margin: 0px auto;
+    padding-top: 10px;
+}
+.lado1{
+    
+    width: 35px;
+    height: 150px;
+     display: flex;
+     flex-wrap: wrap;
+     align-items: flex-end;
+     
+
+}
+
+ button.l1{
+    width: 35px;
+    height: 27px;
+    border-radius: 5px;
+    background-color: rgb(49, 49, 49);
+    color: white;
+    border: rgb(66, 66, 66) 1px inset;
+    cursor: pointer;
+
+}
+.lado1 button:hover{
+    box-shadow: 0px 0px 12px rgb(1,1,1);
+}
+.lado2 button:hover{
+    box-shadow: 0px 0px 12px rgb(1,1,1);
+}
+.lado2{
+    
+    width: 35px;
+    height: 150px;
+     display: flex;
+     flex-wrap: wrap;
+     align-items: flex-end;
+}
+.contra{
+    width: 175px;
+    height: 22px;
+    border-radius: 5px;
+    margin-left: 20px;
+    background-color: rgb(233, 227, 162);
+}
+
+.contenido {
+    width: 310px;
+    height: 180px;
+    margin-top: 10px;
+    
+}
+
 
 
 
